--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Lexend+Deca">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display">
 
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -33,8 +34,8 @@
       <h1>SEDANS</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</p>
-      <button class="button">
-        <p style="color:  hsl(31, 77%, 52%);">learn more</p>
+      <button style="--color: hsl(31, 77%, 52%);" class="button">
+        Learn More
       </button>
     </div>
     <div class="card-suvs">
@@ -42,8 +43,8 @@
       <h1>SUVS</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
-      <button class="button">
-        <p style="color:  hsl(184, 100%, 22%);">learn more</p>
+      <button style="--color: hsl(184, 100%, 22%)" class="button">
+        Learn More
       </button>
     </div>
     <div class="card-luxury">
@@ -51,8 +52,8 @@
       <h1>LUXURY</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</p>
-      <button class="button">
-        <p style="color:  hsl(179, 100%, 13%);">learn more</p>
+      <button style="--color: hsl(179, 100%, 13%)" class="button">
+        Learn More
       </button>
     </div>
   </div>
