--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="center">
     <div class="card-sedan">
-      <img src="/images/icon-sedans.svg">
+      <img src="images/icon-sedans.svg">
       <h1>SEDANS</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</p>
@@ -27,7 +27,7 @@
       </button>
     </div>
     <div class="card-suvs">
-      <img src="/images/icon-suvs.svg">
+      <img src="images/icon-suvs.svg">
       <h1>SUVS</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
@@ -36,7 +36,7 @@
       </button>
     </div>
     <div class="card-luxury">
-      <img src="/images/icon-luxury.svg">
+      <img src="images/icon-luxury.svg">
       <h1>LUXURY</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</p>
